Changed photos and div structure

--- a/cy1.html
+++ b/cy1.html
@@ -25,62 +25,42 @@
           <li class="nav-item">
             <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
           </li>
-          <!-- Unneccessary for the moment
-          <li class="nav-item dropdown">
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
+          <li class="nav-item">
+            <a class="nav-link disabled" id="cy3" href="cy3.html">Cycle 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="cy4" href="cy4.html">Cycle 4</a>
+          </li>
+            <li class="nav-item">
+                <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="biome" href="biome.html">Biome Projects</a>
+            </li>
+          </ul>
+          </div>
+          </nav>
+          </navbar>
+            <main id="main">
+              <br />
+      <div class = 'second'>
+        <h2 id="thingHead"><strong>Cycle 1 Artwork</strong></h2>
+        <p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
+        <p><em>Click the links to view each project</em></p>
+        </main>
+        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
+        <br />
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Sketchbook 3.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Color Research 3.png" height="10%"width="18%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <br />
       </div>
-    </li>
-  -->
-  <li class="nav-item">
-    <a class="nav-link disabled" id="cy3" href="cy3.html">Cycle 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="cy4" href="cy4.html">Cycle 4</a>
-  </li>
-    <li class="nav-item">
-        <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" id="biome" href="biome.html">Biome Projects</a>
-    </li>
-  </ul>
-  </div>
-  </nav>
-  </navbar>
-    <main id="main">
-      <br />
-<h2 id="thingHead"><strong>Cycle 1 Artwork</strong></h2>
-<p>In Cycle 1, we did a wide variety of projects. From personalizing our sketchbooks to naming colors to repainting the famous art table, this cycle was full of many fun activities. At the end of the cycle, we had a better understanding of color, and of art overall. The following projects are some of the main activities which we did in this cycle.</p>
-<p><em>Click the links to view each project</em></p>
-</main>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
-<br />
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Sketchbook 3.png" width="20%"height="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Color Research 3.png" height="10%"width="18%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-
-
-<br />
-<!--<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html">Sketchbook Cover</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="home.html">Color Research Handout</a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="home.html">Color Swashes</a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;; <a class='descLinks'href="home.html">Table Painting</a></p>
--->
-
-
-<script>
-
-</script>
 <script src = "bootstrap portfolio.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
