--- a/cy3.html
+++ b/cy3.html
@@ -45,17 +45,17 @@
         <p>In Cycle 3, we began to study Renaissance Art. We focused a lot on sketching, and also learned about the techniques and works of artists such as Michelangelo, Raphael and Donatello. It proved to be a very interesting topic, and it really helped us to understand the evolution of art.</p>
         <p><em>Click the links to view each project</em></p>
         </main>
-        <p id='descriptors'>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; <a class='descLinks'href="sculpture.html"><strong>Child At Play Sculpture</strong></a>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="draft.html"><strong>Child At Play Draft</strong></a>
-        </p>
+        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Sketchbook Cover</strong></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Color Research Handout</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Color Swatch</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Table Painting</strong></a></p>
         <br />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img id = 'sculpture3' src = "Final_Sculpture.png"width="20%"height="50%"/>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img class="artworkImgs"src = "Child_at_play.png" height="50%"width="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-
+        <img class="artworkImgs"src = "Sketchbook 3.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Color Research 3.png" height="10%"width="18%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <br />
         </main>
 
