--- a/cy3.html
+++ b/cy3.html
@@ -50,7 +50,7 @@
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Sketchbook 3.png" width="20%"height="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs"src = "Color Research 3.png" height="10%"width="18%"/>
+        <img class="artworkImgs"src = "Donatello2.png" height="10%"width="18%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "swatch.png" width="20%"height="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
