Fixed image link

--- a/cy3.html
+++ b/cy3.html
@@ -48,7 +48,7 @@
         <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="sketchbook.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="handout.html"><strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="swatch.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="table.html"><strong>Something here</strong></a></p>
         <br />
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs"src = "PLant_sketch.png" width="20%"height="20%"/>
+        <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs" id='donatello'src = "Donatello2.png" height="10%"width="18%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
