--- a/home.html
+++ b/home.html
@@ -21,32 +21,23 @@
             <a class="nav-link" id="home"href="#"> Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" id="cy1"href="cy1.html">Cycle 1 <span class="sr-only">(current)</span></a>
+            <a class="nav-link" id="cy1"href="cy1/cy1.html">Cycle 1 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
+            <a class="nav-link" id="cy2"href="cy2/cy2.html">Cycle 2</a>
           </li>
     </li>
   <li class="nav-item">
-    <a class="nav-link disabled" id="cy3" href="cy3.html">Cycle 3</a>
+    <a class="nav-link disabled" id="cy3" href="cy3/cy3.html">Cycle 3</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="cy4" href="cy4.html">Cycle 4</a>
+    <a class="nav-link" id="cy4" href="cy4/cy4.html">Cycle 4</a>
   <li class="nav-item">
-      <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
+      <a class="nav-link" id="cy5" href="cy5/cy5.html">Cycle 5</a>
   <li class="nav-item">
-              <a class="nav-link" id="biome" href="biome.html">Biome Projects</a>
+              <a class="nav-link" id="biome" href="biome/biome.html">Biome Projects</a>
   </li>
 
-  <!--<li class="nav-item dropdown">
-      <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Other Versions of this Page</a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <a class="dropdown-item" href="../mainpage.html"target="_blank">Original Website</a>
-    <a class="dropdown-item" href="#">HTML Alone</a>
-  </div>
-
--->
   </ul>
   </div>
   </nav>
@@ -74,8 +65,8 @@
           <option class="options">Nitya</option>
           <option class="options">Ulani</option>
         </optgroup>
-      
-      </select>  
+
+      </select>
    </form>     -->
   <br /><br />
 </main>
