--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Cycle 4 Artwork</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel = stylesheet href = "portfolio.css" />
+  <link rel = stylesheet href = "../portfolio.css" />
 </head>
 <body id = "body">
   <navbar id='navbar'>
@@ -17,13 +17,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" id="home"href="home.html"> Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" id="home"href="../home.html"> Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" id="cy1"href="cy1.html">Cycle 1 <span class="sr-only">(current)</span></a>
+            <a class="nav-link" id="cy1"href="../cy1/cy1.html">Cycle 1 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="cy2"href="cy2.html">Cycle 2</a>
+            <a class="nav-link" id="cy2"href="../cy2/cy2.html">Cycle 2</a>
           </li>
           <!-- <li class="nav-item dropdown">
           <li class="nav-item dropdown">
@@ -38,14 +38,14 @@
     </li>
   -->
   <li class="nav-item">
-    <a class="nav-link disabled" id="cy3" href="cy3.html">Cycle 3</a>
+    <a class="nav-link disabled" id="cy3" href="../cy3/cy3.html">Cycle 3</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" id="cy4" href="#">Cycle 4</a>
     <li class="nav-item">
-        <a class="nav-link" id="cy5" href="cy5.html">Cycle 5</a>
+        <a class="nav-link" id="cy5" href="../cy5/cy5.html">Cycle 5</a>
     <li class="nav-item">
-        <a class="nav-link" id="biome" href="biome.html">Biome Projects</a>
+        <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
     </li>
   </ul>
   </div>
