Changed final photo

--- a/cy3/cy3.html
+++ b/cy3/cy3.html
@@ -54,7 +54,7 @@
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Contour2.jpg" width="20%"height="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs"src = "Table.png" width="20%"height="20%"/>
+        <img class="artworkImgs"src = "../cy1/Table.png" width="20%"height="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <br />
         </main>
