--- a/Home/home.html
+++ b/Home/home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Art Digital Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel = stylesheet href = "../portfolio.css" />
+  <link rel = stylesheet href = "../js_css/portfolio.css" />
   <link type="image/png" rel="icon" href="file:///Users/kabirsamsi/Coding%20Projects/Palette.ico">
 </head>
 <body id = "body">
@@ -53,7 +53,7 @@
   <br /><br />
 </main>
 
-<script src = "bootstrap portfolio.js"></script>
+<script src = "../js_css/bootstrap portfolio.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
