--- a/cy5/cy5.html
+++ b/cy5/cy5.html
@@ -53,7 +53,7 @@
   </navbar>
     <main id="main">
       <h1>Cycle 5 Artwork</h1>
-<h1>This page is in process of being built</h1>
+<h1>This page is currently under development</h1>
 </main>
 
 <script src = "../js_css/bootstrap portfolio.js"></script>
