Changed the subheadings to match content

--- a/cy3/cy3_sketches.html
+++ b/cy3/cy3_sketches.html
@@ -9,17 +9,20 @@
   <body>
     <navbar id='navbar'>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="cy2.html">Cycle 2 Artwork</a>
+        <a class="navbar-brand" href="cy3.html">Cycle 3 Artwork</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">Child At Play Sculpture<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Cycle 3 Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="draft.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="artist.html">Donatello Presentation<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -28,13 +31,13 @@
 
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>Child At Play Sculpture</strong></h1>
+      <h1 id='thingHead'><strong>Cycle 3 Sketches</strong></h1>
       <br /><br />
-      <img id = 'sculpture2' src = "Sculpture.jpg"width="25%"height="14%"/>
-      <img id = 'sculpture' src = "Sculpture.png"width="35%"height="30%"rotate='90' />
+      <img id = 'sculpture2' src = "Plant_sketch.png"width="25%"height="14%"/>
+      <img id = 'sculpture' src = "Plant_notes.jpg"width="35%"height="30%"rotate='90' />
       <img id = 'sculpture3' src = "Final_Sculpture.png"width="25%"height="14%"/>
       <br /><br /><br />
-      <em>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</em>
+      <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
       <br /><br />
       <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The process can be seen throughout the above images. The result is the final image.</p>
     </main>
