--- a/cy3/artist.html
+++ b/cy3/artist.html
@@ -16,10 +16,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">Cycle 3 Sketches<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="cy3_sketches.html">Cycle 3 Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="artist.html">Donatello Presentation<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="#">Donatello Presentation<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
