Changed ids of horizontal images

--- a/cy3/contours.html
+++ b/cy3/contours.html
@@ -34,7 +34,7 @@
       <h1 id='thingHead'><strong>Contour Sketches</strong></h1>
       <br /><br />
       <img id = 'sculpture2' src = "Contour.jpg"width="25%"height="14%"/>
-      <img id = 'sculpture' src = "Contour2.jpg"width="35%"height="30%"rotate='90' />
+      <img id = 'sculpture1' src = "Contour2.jpg"width="35%"height="30%"rotate='90' />
       <img id = 'sculpture3' src = "Final_Sculpture.png"width="25%"height="14%"/>
       <br /><br /><br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Blue Felt-Tipped Marker, Sketchbook Paper</em>
