--- a/cy3/cy3_sketches.html
+++ b/cy3/cy3_sketches.html
@@ -34,7 +34,7 @@
       <h1 id='thingHead'><strong>Cycle 3 Sketches</strong></h1>
       <br /><br />
       <img id = 'sculpture2' src = "Plant_sketch.png"width="25%"height="14%"/>
-      <img id = 'sculpture' src = "Plant_notes.jpg"width="35%"height="30%"rotate='90' />
+      <img id = 'sculpture1' src = "Plant_notes.jpg"width="35%"height="30%"rotate='90' />
       <img id = 'sculpture3' src = "Final_Sculpture.png"width="25%"height="14%"/>
       <br /><br /><br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
