Completed changes in cycle 3 directory

--- a/cy3/contours.html
+++ b/cy3/contours.html
@@ -24,6 +24,9 @@
             <li class="nav-item active">
               <a class="nav-link" id="cy2"href="#">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" id="home"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+            </li>
           </ul>
       </div>
     </nav>
@@ -33,13 +36,12 @@
       <br />
       <h1 id='thingHead'><strong>Contour Sketches</strong></h1>
       <br /><br />
-      <img id = 'sculpture2' src = "Contour.jpg"width="25%"height="14%"/>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img id = 'sculpture2' src = "Contour.jpg"width="25%"height="14%"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <img id = 'sculpture1' src = "Contour2.jpg"width="35%"height="30%"rotate='90' />
-      <img id = 'sculpture3' src = "Final_Sculpture.png"width="25%"height="14%"/>
       <br /><br /><br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Blue Felt-Tipped Marker, Sketchbook Paper</em>
       <br /><br />
-      <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The process can be seen throughout the above images. The result is the final image.</p>
+      <p>This was one of the strangest but at the same time most fun projects we did this cycle. We had to draw one of our classmates in contour style, in which you draw without looking at the paper you are drawing on. Dmitry and I decided to sketch each other, but the final results ended up looking nothing like what we were aiming for. Naturally, most of our group had results as strange as the ones I got, both the first time when we used pencil and the second time when we used a marker.</p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
