--- a/cy3/cy3.html
+++ b/cy3/cy3.html
@@ -45,7 +45,7 @@
         <p>In Cycle 3, we began to study Renaissance Art. We focused a lot on sketching, and also learned about the techniques and works of artists such as Michelangelo, Raphael and Donatello. It proved to be a very interesting topic, and it really helped us to understand the evolution of art.</p>
         <p><em>Click the links to view each project</em></p>
         </main>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html"><strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="../cy1/table.html"><strong>Still Life Sketch</strong></a></p>
+        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html"><strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
         <br />
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
@@ -54,7 +54,7 @@
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <img class="artworkImgs"src = "Contour2.jpg" width="20%"height="20%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <img class="artworkImgs"src = "../cy1/Table.png" width="20%"height="20%"/>
+        <img class="artworkImgs" id='compute'src = 'computer_sketch.jpg' width="20%"height="5%"/>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <br />
         </main>
