--- a/cy3/cy3_sketches.html
+++ b/cy3/cy3_sketches.html
@@ -24,22 +24,23 @@
             <li class="nav-item active">
               <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" id="home"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+            </li>
           </ul>
       </div>
     </nav>
     </navbar>
-
     <main id='main'>
       <br />
       <h1 id='thingHead'><strong>Cycle 3 Sketches</strong></h1>
       <br /><br />
-      <img id = 'sculpture2' src = "Plant_sketch.png"width="25%"height="14%"/>
-      <img id = 'sculpture1' src = "Plant_notes.jpg"width="35%"height="30%"rotate='90' />
-      <img id = 'sculpture3' src = "Final_Sculpture.png"width="25%"height="14%"/>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img id = 'sculpture2' src = "Plant_sketch.png"width="25%"height="14%"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <img id = 'sculpture1' src = "Plant_notes.jpg"width="35%"height="10%"rotate='90' />
       <br /><br /><br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
       <br /><br />
-      <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The process can be seen throughout the above images. The result is the final image.</p>
+      <p>We studied sketching throughout this cycle, and these were some of the first drawings which we did. We had to choose a stationary object and display many of its characteristics, such as its shadows, as well as its details. My sketch was black-and-white, which allowed me to work much more on my shading given that I only had two colors. I sketched a houseplant, which, with its many color values and shapes, was challenging but fun to draw. The first image shows my sketch, while my second image shows my notes on the various features of the plant which I was sketching.</p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
