--- a/cy3/still_life.html
+++ b/cy3/still_life.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Donatello Presentation</title>
+    <title>Cycle 3 Sketches</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
   </head>
@@ -19,31 +19,29 @@
               <a class="nav-link" id="home"href="cy3_sketches.html">Cycle 3 Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="#">Donatello Presentation<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="artist.html">Donatello Presentation<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Final Still Life Sketch<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
     </nav>
     </navbar>
-
     <main id='main'>
       <br />
-      <h1 id="thingHead"><strong>Donatello Presentation</strong></h1>
-      <br />
-      &nbsp; &nbsp; &nbsp;<img src = "Donatello.png"width="50%"height="50%" />
+      <h1 id='thingHead'><strong>Final Still Life Sketch</strong></h1>
       <br /><br />
-      <p><em>Medium: Google Slides</em></p>
-      <a id = "link" href = "https://docs.google.com/presentation/d/1RB6oC2Syf3KcFQLCXOoxmIOk5SpBS-YWbBSX_xkjwFk/edit?ts=5c060ff9#slide=id.p" target="_blank"><p>Click this link to view the entire presentation.</p></a>
+      <img id = 'sculpture2' src = "computer_sketch.jpg"width="25%"height="14%"/>
       <br /><br />
-      <p>This project was done to help us understand more about Renaissance artists. I teamed up with Vibhav and Dmitry to make a presentation about Donatello, an Italian sculptor. It proved to be a fascinating topic, especially since Donatello was an artists whom I had known very little about formerly. We researched things such as his origins, his works, his style and his influences. Along with other groups in our class, we presented our research on Donatello to the class in the form of a slideshow. We also wrote speaking parts which analyzed each sculpture which we showed.</p>
+      <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
+      <br /><br />
+      <p>We studied sketching throughout this cycle, and these were some of the first drawings which we did. We had to choose a stationary object and display many of its characteristics, such as its shadows, as well as its details. My sketch was black-and-white, which allowed me to work much more on my shading given that I only had two colors. I sketched a houseplant, which, with its many color values and shapes, was challenging but fun to draw. The first image shows my sketch, while my second image shows my notes on the various features of the plant which I was sketching.</p>
     </main>
-  <script src = "cy1.js"></script>
+  <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
