--- a/cy3/still_life.html
+++ b/cy3/still_life.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Cycle 3 Sketches</title>
+    <title>Final Still Life Sketch</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
   </head>
@@ -34,12 +34,11 @@
     <main id='main'>
       <br />
       <h1 id='thingHead'><strong>Final Still Life Sketch</strong></h1>
-      <br /><br />
-      <img id = 'sculpture2' src = "computer_sketch.jpg"width="25%"height="14%"/>
-      <br /><br />
+      <img id = 'computer2' src = "computer_sketch.jpg"width="25%"height="14%"/>
+      <br />
       <em>Mediums: 0.7 mm Mechanical Pencil, Sketchbook Paper</em>
-      <br /><br />
-      <p>We studied sketching throughout this cycle, and these were some of the first drawings which we did. We had to choose a stationary object and display many of its characteristics, such as its shadows, as well as its details. My sketch was black-and-white, which allowed me to work much more on my shading given that I only had two colors. I sketched a houseplant, which, with its many color values and shapes, was challenging but fun to draw. The first image shows my sketch, while my second image shows my notes on the various features of the plant which I was sketching.</p>
+      <br /><br /><br />
+      <p>This was our final assignment in Cycle 3. It was similar to our first assignment in that we had to select an object and sketch it in a realistic way. I chose my computer and sketched it on top of the table, along with my keyboard and wallpaper. We were given 2 weeks to work on this, during which we critiqued each other on things such as shading and similarity to the original object. At the end, I managed to convey my computer, the different shades of the table and the shadow around it. I felt that this was a fairly realistic drawing and I was pleased with it.</p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
