--- a/cy2/sculpture.html
+++ b/cy2/sculpture.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Child At Play</title>
+    <title>Azure Acrobat Sculpture</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel = stylesheet href = "../js_css/portfolio.css" />
   </head>
@@ -16,10 +16,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">Child At Play Sculpture<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Azure Acrobat Sculpture<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="cy1"href="draft.html">Child At Play Rough Drawing<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="draft.html">Sculpture Rough Drawing<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -28,7 +28,7 @@
 
     <main id='main'>
       <br />
-      <h1 id='thingHead'><strong>Child At Play Sculpture</strong></h1>
+      <h1 id='thingHead'><strong>Azure Acrobat Sculpture</strong></h1>
       <br /><br />
       <img id = 'sculpture2' src = "Sculpture.jpg"width="25%"height="14%"/>
       <img id = 'sculpture' src = "Sculpture.png"width="35%"height="30%"rotate='90' />
@@ -36,7 +36,7 @@
       <br /><br /><br />
       <em>Mediums: Saran Wrap, Tape, Mod Podge, Water, Paper Towel, Newspaper, Glue, Paint</em>
       <br /><br />
-      <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a child in an apparent state of play. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The process can be seen throughout the above images. The result is the final image.</p>
+      <p>This was a group project which we worked on throughout the cycle. It started as just <a href = 'draft.html'>a plan on a piece of paper</a>, which displayed a character in an active pose. The final result was more like a corpse, but it was still a good effort. We modeled multiple people's body parts in the process, so that the group element would increase even more. We started by first creating and combining body parts with saran wrap and filling them with newspaper. We then combined mod podge, a glue-like substance, as well as some water, used it as papier-mâché to coat the sculpture, and finalized it with a layer of glue and several different colors. The process can be seen throughout the above images. The result is the final image.</p>
     </main>
   <script src = "bootstrap portfolio.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
