Further styled login page

--- a/Home/login.html
+++ b/Home/login.html
@@ -14,7 +14,7 @@
       <br  />
       <br />
       <h1 class="display-1" id="homeHead"><strong>Kabir's Digital Portfolio</strong></h1><br>
-    <em><strong><h2>LOGIN</h2></strong></em>
+    <em><strong><h2>LOGIN PAGE</h2></strong></em>
     <br />
     <input type='password'id='pw'placeholder="Enter the original name of Art C's sculpture (all lowercase, no spaces)"/>
     <br /><br />
