--- a/biome/visual.html
+++ b/biome/visual.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="biome"href="#">Great Lesson Visual<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Great Lesson Visual<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" id="cy1"href="#">Project 2 <span class="sr-only">(current)</span></a>
@@ -43,7 +43,7 @@
       <p>This was a project which we did for our Mini-Biome Report. While on our trip, we learned about Maria Montessori's 'Great Lesson', which showed how infinitesimal humans are in the scope of Earth's history. We were then required to write a response and make a drawing of this. My drawing depicts the past, and the evolution of Earth, as well as the tiny sliver of time which is the present, while also showing the expanding future which lies ahead for us. This was a good project and I learned a lot from it.</p>
       <br />
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
