Changed js links

--- a/cy2/draft.html
+++ b/cy2/draft.html
@@ -36,7 +36,7 @@
       <br /><br />
         <p>This was our rough drawing for the <a href = 'sculpture.html'>Azure Acrobat Sculpture</a>. It started off as just a drawing of a child standing in an apparent playing pose, but towards the end of the project, when the time came to paint the figure, we added color to the drawing as a kind of reference to how we would design the actual sculpture. This started off as a drawing of a girl wearing a Greek toga, but as we continued to develop it, we eventually made the gender ambiguous and replaced the toga with a scheme of colors. At the end, our sculpture had multiple shades of blue, and also had several clouds around its torso.</p>
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
