Changed js links

--- a/cy3/artist.html
+++ b/cy3/artist.html
@@ -25,7 +25,7 @@
               <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -43,7 +43,7 @@
       <br /><br />
       <p>This project was done to help us understand more about Renaissance artists. I teamed up with Vibhav and Dmitry to make a presentation about Donatello, an Italian sculptor. It proved to be a fascinating topic, especially since Donatello was an artists whom I had known very little about formerly. We researched things such as his origins, his works, his style and his influences. Along with other groups in our class, we presented our research on Donatello to the class in the form of a slideshow. We also wrote speaking parts which analyzed each sculpture which we showed.</p>
     </main>
-  <script src = "cy1.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
