--- a/cy3/cy3_sketches.html
+++ b/cy3/cy3_sketches.html
@@ -25,7 +25,7 @@
               <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -42,7 +42,7 @@
       <br /><br />
       <p>We studied sketching throughout this cycle, and these were some of the first drawings which we did. We had to choose a stationary object and display many of its characteristics, such as its shadows, as well as its details. My sketch was black-and-white, which allowed me to work much more on my shading given that I only had two colors. I sketched a houseplant, which, with its many color values and shapes, was challenging but fun to draw. The first image shows my sketch, while my second image shows my notes on the various features of the plant which I was sketching.</p>
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
