--- a/cy3/still_life.html
+++ b/cy3/still_life.html
@@ -25,7 +25,7 @@
               <a class="nav-link" id="cy2"href="contours.html">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="#">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="#">Final Still Life Sketch<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -40,7 +40,7 @@
       <br /><br /><br />
       <p>This was our final assignment in Cycle 3. It was similar to our first assignment in that we had to select an object and sketch it in a realistic way. I chose my computer and sketched it on top of the table, along with my keyboard and wallpaper. We were given 2 weeks to work on this, during which we critiqued each other on things such as shading and similarity to the original object. At the end, I managed to convey my computer, the different shades of the table and the shadow around it. I felt that this was a fairly realistic drawing and I was pleased with it.</p>
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
