--- a/cy3/contours.html
+++ b/cy3/contours.html
@@ -25,7 +25,7 @@
               <a class="nav-link" id="cy2"href="#">Contour Sketches<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="home"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy3"href="still_life.html">Final Still Life Sketch<span class="sr-only">(current)</span></a>
             </li>
           </ul>
       </div>
@@ -43,7 +43,7 @@
       <br /><br />
       <p>This was one of the strangest but at the same time most fun projects we did this cycle. We had to draw one of our classmates in contour style, in which you draw without looking at the paper you are drawing on. Dmitry and I decided to sketch each other, but the final results ended up looking nothing like what we were aiming for. Naturally, most of our group had results as strange as the ones I got, both the first time when we used pencil and the second time when we used a marker.</p>
     </main>
-  <script src = "bootstrap portfolio.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
