Changed js links

--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -25,38 +25,40 @@
           <li class="nav-item">
             <a class="nav-link" id="cy2"href="../cy2/cy2.html">Cycle 2</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-    </li>
-  -->
-  <li class="nav-item">
-    <a class="nav-link disabled" id="cy3" href="../cy3/cy3.html">Cycle 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="cy4" href="#">Cycle 4</a>
-    <li class="nav-item">
-        <a class="nav-link" id="cy5" href="../cy5/cy5.html">Cycle 5</a>
-    <li class="nav-item">
-        <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
-    </li>
-  </ul>
-  </div>
-  </nav>
-  </navbar>
-    <main id="main">
-      <h1>Cycle 4 Artwork</h1>
-<h1>This page is currently under development</h1>
-</main>
+          <li class="nav-item">
+            <a class="nav-link disabled" id="cy3" href="../cy3/cy3.html">Cycle 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="cy4" href="#">Cycle 4</a>
+            <li class="nav-item">
+                <a class="nav-link" id="cy5" href="../cy5/cy5.html">Cycle 5</a>
+            <li class="nav-item">
+              <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
+            </li>
+          </ul>
+          </div>
+          </nav>
+          </navbar>
+            <main id="main">
+              <br />
+        <h2 id="thingHead"><strong>Cycle 4 Artwork</strong></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget rhoncus elit. Integer sodales velit a nisi vulputate euismod. Curabitur id nibh arcu. Vestibulum vitae justo nec velit tincidunt vulputate. Nulla interdum justo eget turpis hendrerit, ac lacinia arcu convallis. Nunc ante tortor, dictum vitae est sit amet, condimentum ultrices lacus. Praesent eget pretium sapien. Sed sollicitudin magna a urna iaculis, eget bibendum erat facilisis. Phasellus euismod nunc ut risus condimentum, ut vestibulum leo bibendum. Quisque ac enim vel mauris condimentum dignissim. </p>
+        <p><em>Click the links to view each project</em></p>
+        <!-- <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html"><strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
+        <br />
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs" id='donatello'src = "Donatello2.png" height="10%"width="18%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Contour2.jpg" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs" id='compute'src = 'computer_sketch.jpg' width="20%"height="5%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <br /> -->
+        </main>
 
-<script src = "../js_css/bootstrap portfolio.js"></script>
+<script src = "../js_css/listeners.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
