--- a/cy5/cy5.html
+++ b/cy5/cy5.html
@@ -25,38 +25,26 @@
           <li class="nav-item">
             <a class="nav-link" id="cy2"href="../cy2/cy2.html">Cycle 2</a>
           </li>
-          <!-- <li class="nav-item dropdown">
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
-    </li>
-  -->
-  <li class="nav-item">
-    <a class="nav-link disabled" id="cy3" href="../cy3/cy3.html">Cycle 3</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" id="cy4" href="../cy4/cy4.html">Cycle 4</a>
-    <li class="nav-item">
-        <a class="nav-link" id="cy5" href="#">Cycle 5</a>
-    <li class="nav-item">
-        <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
-    </li>
-  </ul>
-  </div>
-  </nav>
-  </navbar>
-    <main id="main">
-      <h1>Cycle 5 Artwork</h1>
-<h1>This page is currently under development</h1>
-</main>
+          <li class="nav-item">
+            <a class="nav-link disabled" id="cy3" href="../cy3/cy3.html">Cycle 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="cy4" href="../cy4/cy4.html">Cycle 4</a>
+            <li class="nav-item">
+                <a class="nav-link" id="cy5" href="#">Cycle 5</a>
+            <li class="nav-item">
+                <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
+            </li>
+          </ul>
+          </div>
+          </nav>
+          </navbar>
+            <main id="main">
+              <h1>Cycle 5 Artwork</h1>
+        <h1>This page is currently under development</h1>
+        </main>
 
-<script src = "../js_css/bootstrap portfolio.js"></script>
+<script src = "../js_css/listeners.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
