Changed links to central js file instead of local js file

--- a/cy1/sketchbook.html
+++ b/cy1/sketchbook.html
@@ -16,16 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="sketch"href="#">Sketchbook Cover<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="#">Sketchbook Cover<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="hand"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="swatch"href="swatch.html">Color Swatch</a>
+              <a class="nav-link" id="cy2"href="swatch.html">Color Swatch</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" id="table" href="table.html">Table Painting</a>
+              <a class="nav-link disabled" id="cy3" href="table.html">Table Painting</a>
             </li>
           </ul>
       </div>
@@ -42,7 +42,7 @@
       <br /><br />
       <p>I drew this image on a piece of recycled paper, which I then stapled to my sketchbook. I wanted to put a lot of color into it, so I colored the entire image, while adding things to the image which personalized it. In the center, I drew a hacker. This is because I enjoy studying computers and I thought this would look nice as an image. Around the hacker, I drew several colored lines, which I filled with 0s and 1s. Translated from binary, they are the passcode to my phone. I did this just for fun, and because I thought that it would give it a more genuine and amusing effect. </p>
     </main>
-  <script src = "cy1.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
