--- a/cy1/table.html
+++ b/cy1/table.html
@@ -16,16 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" id="sketch"href="sketchbook.html">Sketchbook Cover<span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="home"href="sketchbook.html">Sketchbook Cover<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" id="hand"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
+              <a class="nav-link" id="cy1"href="handout.html">Color Research Handout <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="swatch"href="swatch.html">Color Swatch</a>
+              <a class="nav-link" id="cy2"href="swatch.html">Color Swatch</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" id="table" href="#">Table Painting</a>
+              <a class="nav-link disabled" id="cy3" href="#">Table Painting</a>
             </li>
           </ul>
       </div>
@@ -41,7 +41,7 @@
       <p><em>Medium: Acrylic on Wood</em></p>
       <p>This was our final stage in the mixing of our colors. After having successfully replicated our colors, we had to make enough of that color to paint a 2-inch thick strip across the art table. Every single person did this, and people were placed in strategic locations based on their colors. The resulting image was a table striped with forty different shades of color. This was an aesthetically pleasing image, and it was also a really fun experience to repaint the table which we had used for almost three years now. This made me feel as though the impression of this year's students would be on the art table for the next few years.</p>
     </main>
-  <script src = "cy1.js"></script>
+  <script src = "../js_css/listeners.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
