Added three new images

--- a/cy4/cy4.html
+++ b/cy4/cy4.html
@@ -33,15 +33,29 @@
             <li class="nav-item">
                 <a class="nav-link" id="cy5" href="../cy5/cy5.html">Cycle 5</a>
             <li class="nav-item">
-                <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
+              <a class="nav-link" id="biome" href="../biome/biome.html">Biome Projects</a>
             </li>
           </ul>
           </div>
           </nav>
           </navbar>
             <main id="main">
-              <h1>Cycle 4 Artwork</h1>
-        <h1>This page is currently under development</h1>
+              <br />
+        <h2 id="thingHead"><strong>Cycle 4 Artwork</strong></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget rhoncus elit. Integer sodales velit a nisi vulputate euismod. Curabitur id nibh arcu. Vestibulum vitae justo nec velit tincidunt vulputate. Nulla interdum justo eget turpis hendrerit, ac lacinia arcu convallis. Nunc ante tortor, dictum vitae est sit amet, condimentum ultrices lacus. Praesent eget pretium sapien. Sed sollicitudin magna a urna iaculis, eget bibendum erat facilisis. Phasellus euismod nunc ut risus condimentum, ut vestibulum leo bibendum. Quisque ac enim vel mauris condimentum dignissim. </p>
+        <p><em>Click the links to view each project</em></p>
+        <!-- <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class='descLinks'href="cy3_sketches.html"><strong>Still-Life Drawings</strong></a>&nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="artist.html"><strong>Renaissance Artist Presentation</strong></a></a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; <a class='descLinks'href="contours.html"><strong>Contour Drawings</strong></a></a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a class='descLinks'href="still_life.html"><strong>Still Life Sketch</strong></a></p>
+        <br />
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Plant_sketch.png" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs" id='donatello'src = "Donatello2.png" height="10%"width="18%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs"src = "Contour2.jpg" width="20%"height="20%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <img class="artworkImgs" id='compute'src = 'computer_sketch.jpg' width="20%"height="5%"/>
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <br /> -->
         </main>
 
 <script src = "../js_css/listeners.js"></script>
